# LoCoBotRos

./: .gitignore  LOG.md  README.md
LoCoBot/locobot_description/urdf/: cmu_locobot_description.urdf
LoCoBot/locobot_gazebo/launch/: gazebo_moveit_main.launch
LoCoBot/locobot_navigation/orb_slam2_ros/cfg/: default.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.sh
install/dynamixel_workbench_toolbox/share/dynamixel_workbench_toolbox/: local_setup.sh
install/interbotix_xs_driver/share/interbotix_xs_driver/: local_setup.sh
install/interbotix_xs_ros_control/share/interbotix_xs_ros_control/: package.dsv  package.ps1  package.sh
install/interbotix_xs_rviz/share/interbotix_xs_rviz/: package.zsh
install/interbotix_xs_sdk/share/interbotix_xs_sdk/: package.bash
install/interbotix_xslocobot_sim/share/interbotix_xslocobot_sim/: package.sh
install/locobot_descriptions/share/locobot_descriptions/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  (+2 more)
interbotix_ws/: frames_2025-08-17_09.30.07.gv
interbotix_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
interbotix_ws/log/: latest_build  latest_list  latest_mixin
interbotix_ws/src/hello_moveit/: CMakeLists.txt  package.xml
interbotix_ws/src/install/: local_setup.sh  setup.sh
interbotix_ws/src/locobot/: CMakeLists.txt  package.xml
interbotix_ws/src/locobot_kinematics/: package.xml  setup.cfg  setup.py
interbotix_ws/src/log/: latest_build
interbotix_ws/src/mtc_tutorial/: CMakeLists.txt  package.xml
interbotix_ws/src/nav2_apriltag_point/: package.xml  setup.cfg  setup.py
interbotix_ws/src/teleop_joystick/: CMakeLists.txt  package.xml
log/: latest_build
src/locobot_descriptions/: CMakeLists.txt  package.xml
src/locobot_descriptions/urdf/kobuki_version/: locobot_kobuki.urdf
src/py_pubsub/: setup.py
src/py_pubsub/py_pubsub/: subscriber_member_function.py
tutorial_ws/log/: latest_build
tutorial_ws/src/py_pubsub/: package.xml
(+3895 files in other folders)
